website/code/nsieve-icc.log
BUILD COMMANDS FOR: nsieve.icc

Thu Jun 16 20:38:17 PDT 2005

/opt/intel_cc_80/bin/icc -O3 -ip -static -unroll  nsieve.c -o nsieve.icc_run
nsieve.c(1): warning #77: this declaration has no storage class or type specifier
  EMPTY
  ^

nsieve.c(1): error: expected a ";"

compilation aborted for nsieve.c (code 2)
make[3]: [nsieve.icc_run] Error 2 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

nsieve.icc_run %A
Error, could not exec nsieve.icc_run 7 (No such file or directory)
PATH=/opt/shootout/shootout/bench/nsieve:/opt/shootout/shootout/bench/nsieve/tmp:/opt/xds_c/bin:/opt/intel_fc_80/bin:/opt/intel_cc_80/bin:/usr/lib/poplog/current-poplog/pop/pop:/usr/bin:/bin:/usr/lib/poplog/current-poplog/pop/com
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
